# practice-problems

./: .buy-sell-stock.py.swp  buy-sell-stock.py  climbing-stairs.py  coin-change.py  contains-dupe.py  is-unique.py  maximum-subarray.py  product-except-self.py  romanToInt.go  string-permutations.py  two-sum.py  twosum.py  valid-anagram.py  valid-palindrome.py  valid-parentheses.py
2023/: bst-depth.py  (+6 more)
2026/: Dockerfile  README.md  docker-compose.yml  poly-exporter.py  prometheus.yml  pyproject.toml  wallet-health.py
2026/algos/: best_time_to_buy_and_sell_stock.py  binary_search.py  car_fleet.py  climbing_stairs.py  daily_temperatures.py  defang_ip_address.py  diameter_of_a_binary_tree.py  edit_distance.py  group_anagrams.py  happy_digit.py  is_subree.py  kth_largest_integer_in_a_stream.py  last_stone_weight.py  linked_list_cycle_detection.py  lru_cache.py  max_area_of_island.py  max_depth_of_binary_tree.py  process.md  reorder_log_files.py  reverse_a_linked_list.py  same_binary_tree.py  top_k_elements_in_a_list.py  two_sum.py  valid_anagram.py  valid_parentheses.py
2026/c-hashmap/: hashmap.c  hashmap.h  main.c  word_frequency_example.c
2026/c-linked-list/: linked_list.c
2026/c-networking/: notes.md
2026/logs-to-metrics/: gen_logs.py  logs.json  logs_to_metrics.py
2026/notes/: dbs.md  linux.md  linux_cmds.md  service.c  system_design_notes.md
2026/notes/beej_guide_to_c/: notes.md
2026/poly-project/: .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
2026/polygon-mon/exporter-service/: poly-exporter.py
2026/task-c/: task  tasks.c
(+218 files in other folders)
